--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
     <com.example.tomon.main_painter_v1.CanvasView
         android:id="@+id/canvasView"
         android:layout_width="match_parent"
-        android:layout_height="197dp"
+        android:layout_height="400dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="@android:color/background_light" />
@@ -30,7 +30,7 @@
     <com.example.tomon.main_painter_v1.CanvasView
         android:id="@+id/canvasView2"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_height="400dp"
         android:layout_above="@+id/clear_button2"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="-2dp"
@@ -40,8 +40,8 @@
         android:id="@+id/clear_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/canvasView2"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/canvasView"
         android:text="CLEAR" />
 
     <Button
