--- a/app/src/main/res/layout/top.xml
+++ b/app/src/main/res/layout/top.xml
@@ -80,12 +80,9 @@
         android:layout_height="110dp"
         android:layout_marginBottom="12dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
         android:background="@drawable/gbusagreen"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -175,5 +172,21 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/button_web"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="皆が描いた問題 専用webフォーム"
+        app:layout_constraintBottom_toTopOf="@+id/button_arsinfo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.522"
+        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.506" />
 
 </android.support.constraint.ConstraintLayout>
