--- a/app/src/main/res/layout/paint_top.xml
+++ b/app/src/main/res/layout/paint_top.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textView_問題"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -27,11 +27,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        app:layout_constraintTop_toBottomOf="@+id/textView_問題"
         app:srcCompat="@drawable/gamen" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textView_回答1"
         android:layout_width="288dp"
         android:layout_height="64dp"
         android:layout_marginEnd="8dp"
@@ -46,7 +46,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/textView_回答2"
         android:layout_width="308dp"
         android:layout_height="64dp"
         android:layout_marginEnd="8dp"
@@ -58,10 +58,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_回答1" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/textView_回答3"
         android:layout_width="311dp"
         android:layout_height="192dp"
         android:layout_marginStart="8dp"
@@ -71,7 +71,7 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_回答2" />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -84,7 +84,7 @@
         app:srcCompat="@drawable/gamen2" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/textView_回答4"
         android:layout_width="317dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -95,7 +95,7 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_回答3" />
 
     <Button
         android:id="@+id/button_次へ"
@@ -110,6 +110,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_回答4" />
 
 </android.support.constraint.ConstraintLayout>
