--- a/app/src/main/res/layout/qr1.xml
+++ b/app/src/main/res/layout/qr1.xml
@@ -7,23 +7,19 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:id="@+id/textView_問題"
+        android:layout_width="772dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="145dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="52dp"
-        android:text="わしには多くの孫がいるが、さて何歳でしょうか？"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/ans_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/ans_1"
@@ -34,107 +30,96 @@
         android:text="1"
         android:textSize="36sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_問題" />
 
     <Button
         android:id="@+id/ans_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="256dp"
-        android:layout_marginStart="256dp"
-        android:layout_marginTop="164dp"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="148dp"
         android:text="2"
         android:textSize="36sp"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintStart_toEndOf="@+id/textView_回答1"
+        app:layout_constraintTop_toBottomOf="@+id/textView_問題" />
 
     <Button
         android:id="@+id/ans_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="36dp"
-        android:layout_marginStart="36dp"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="60dp"
         android:text="3"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ans_1"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.413" />
 
     <Button
         android:id="@+id/ans_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="296dp"
-        android:layout_marginStart="296dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginBottom="28dp"
+        android:layout_marginStart="172dp"
+        android:layout_marginTop="62dp"
         android:text="4"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
+        app:layout_constraintStart_toEndOf="@+id/textView_回答3"
         app:layout_constraintTop_toBottomOf="@+id/ans_2"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.507" />
 
     <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="48dp"
+        android:id="@+id/textView_回答1"
+        android:layout_width="164dp"
+        android:layout_height="55dp"
         android:layout_marginStart="48dp"
         android:layout_marginTop="152dp"
-        android:text="100歳"
         android:textSize="36sp"
         app:layout_constraintStart_toEndOf="@+id/ans_1"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_問題" />
 
     <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="172dp"
-        android:text="60歳"
+        android:id="@+id/textView_回答2"
+        android:layout_width="110dp"
+        android:layout_height="62dp"
+        android:layout_marginEnd="99dp"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="145dp"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/ans_2"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_問題" />
 
     <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="56dp"
-        android:layout_marginStart="56dp"
+        android:id="@+id/textView_回答3"
+        android:layout_width="169dp"
+        android:layout_height="61dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginStart="52dp"
         android:layout_marginTop="76dp"
-        android:text="0歳"
         android:textSize="36sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ans_3"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_回答1"
+        app:layout_constraintVertical_bias="0.406" />
 
     <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/textView_回答4"
+        android:layout_width="146dp"
+        android:layout_height="63dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="48dp"
         android:layout_marginTop="56dp"
-        android:text="111歳"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.392"
         app:layout_constraintStart_toEndOf="@+id/ans_4"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_回答2"
+        app:layout_constraintVertical_bias="0.442" />
 
 </android.support.constraint.ConstraintLayout>
