--- a/app/src/main/res/layout/answer_stamp.xml
+++ b/app/src/main/res/layout/answer_stamp.xml
@@ -50,7 +50,7 @@
         android:layout_width="165dp"
         android:layout_height="69dp"
         android:layout_marginStart="120dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="16dp"
         android:text="４問目"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="50sp"
@@ -62,8 +62,8 @@
         android:id="@+id/textView16"
         android:layout_width="165dp"
         android:layout_height="69dp"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="12dp"
         android:text="５問目"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="50sp"
@@ -77,13 +77,13 @@
         android:layout_height="69dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="120dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="12dp"
         android:text="EX問題"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.01"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView16"
         app:layout_constraintTop_toBottomOf="@+id/Q3_stamp" />
 
@@ -126,29 +126,32 @@
         android:layout_marginTop="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView15" />
+        app:layout_constraintTop_toBottomOf="@+id/textView15"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/Q5_stamp"
         android:layout_width="100dp"
         android:layout_height="79dp"
         android:layout_marginBottom="30dp"
-        android:layout_marginStart="184dp"
+        android:layout_marginStart="176dp"
         android:layout_marginTop="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/Q4_stamp"
-        app:layout_constraintTop_toBottomOf="@+id/textView16" />
+        app:layout_constraintTop_toBottomOf="@+id/textView16"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/Qex_stamp"
         android:layout_width="100dp"
         android:layout_height="79dp"
         android:layout_marginBottom="30dp"
-        android:layout_marginStart="192dp"
+        android:layout_marginStart="196dp"
         android:layout_marginTop="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/Q5_stamp"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
+        app:layout_constraintTop_toBottomOf="@+id/textView17"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView18"
