--- a/app/src/main/res/layout/ql_main.xml
+++ b/app/src/main/res/layout/ql_main.xml
@@ -11,17 +11,35 @@
         android:layout_alignParentStart="true"
         android:id="@+id/qrReaderLayout">
 
-        <TextView
-            android:id="@+id/textView"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="QR読み取り画面"
-            android:textSize="36sp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="386dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="QR読み取り画面"
+                android:textSize="36sp" />
+
+            <Button
+                android:id="@+id/button_home"
+                android:layout_width="246dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:background="@drawable/ok_image_button"
+                android:text="ホームへ"
+                android:textSize="36sp" />
+
+        </LinearLayout>
 
         <com.journeyapps.barcodescanner.CompoundBarcodeView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/barcodeView"/>
+            android:id="@+id/barcodeView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
     </LinearLayout>
 
 </RelativeLayout>
