--- a/app/src/main/res/layout/qr1.xml
+++ b/app/src/main/res/layout/qr1.xml
@@ -10,23 +10,20 @@
         android:id="@+id/textView_問題"
         android:layout_width="772dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="145dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="32dp"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/ans_1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/ans_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="144dp"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="124dp"
         android:text="1"
         android:textSize="36sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,10 +31,10 @@
 
     <Button
         android:id="@+id/ans_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="148dp"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="204dp"
+        android:layout_marginTop="124dp"
         android:text="2"
         android:textSize="36sp"
         app:layout_constraintStart_toEndOf="@+id/textView_回答1"
@@ -45,81 +42,79 @@
 
     <Button
         android:id="@+id/ans_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="8dp"
         android:text="3"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ans_1"
-        app:layout_constraintVertical_bias="0.413" />
+        app:layout_constraintVertical_bias="0.672" />
 
     <Button
         android:id="@+id/ans_4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
-        android:layout_marginStart="172dp"
-        android:layout_marginTop="62dp"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="204dp"
+        android:layout_marginTop="84dp"
         android:text="4"
         android:textSize="36sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView_回答3"
-        app:layout_constraintTop_toBottomOf="@+id/ans_2"
-        app:layout_constraintVertical_bias="0.507" />
+        app:layout_constraintTop_toBottomOf="@+id/ans_2" />
 
     <TextView
         android:id="@+id/textView_回答1"
-        android:layout_width="164dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="152dp"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="128dp"
         android:textSize="36sp"
         app:layout_constraintStart_toEndOf="@+id/ans_1"
         app:layout_constraintTop_toBottomOf="@+id/textView_問題" />
 
     <TextView
         android:id="@+id/textView_回答2"
-        android:layout_width="110dp"
-        android:layout_height="62dp"
-        android:layout_marginEnd="99dp"
-        android:layout_marginStart="88dp"
-        android:layout_marginTop="145dp"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="172dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="200dp"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.727"
         app:layout_constraintStart_toEndOf="@+id/ans_2"
-        app:layout_constraintTop_toBottomOf="@+id/textView_問題" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView_回答3"
-        android:layout_width="169dp"
-        android:layout_height="61dp"
-        android:layout_marginBottom="30dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="76dp"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="64dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="99dp"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ans_3"
         app:layout_constraintTop_toBottomOf="@+id/textView_回答1"
-        app:layout_constraintVertical_bias="0.406" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView_回答4"
-        android:layout_width="146dp"
+        android:layout_width="160dp"
         android:layout_height="63dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginBottom="36dp"
+        android:layout_marginEnd="180dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.392"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/ans_4"
         app:layout_constraintTop_toBottomOf="@+id/textView_回答2"
-        app:layout_constraintVertical_bias="0.442" />
+        app:layout_constraintVertical_bias="0.909" />
 
 </android.support.constraint.ConstraintLayout>
