--- a/app/src/main/res/layout/qr1_ans.xml
+++ b/app/src/main/res/layout/qr1_ans.xml
@@ -67,7 +67,7 @@
     <ImageView
         android:id="@+id/imageView9"
         android:layout_width="272dp"
-        android:layout_height="200"
+        android:layout_height="200dp"
         android:layout_marginBottom="2dp"
         android:layout_marginEnd="432dp"
         android:layout_marginStart="16dp"
