--- a/app/src/main/res/layout/qr1_ans_ng.xml
+++ b/app/src/main/res/layout/qr1_ans_ng.xml
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button_問題へ戻る"
         android:layout_width="184dp"
         android:layout_height="111dp"
         android:layout_marginBottom="8dp"
@@ -81,7 +81,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginTop="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintEnd_toStartOf="@+id/button_問題へ戻る"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
