各画面のデザイン変更 7/9

--- a/app/src/main/res/layout/qr1.xml
+++ b/app/src/main/res/layout/qr1.xml
@@ -8,22 +8,23 @@
 
     <TextView
         android:id="@+id/textView_問題"
-        android:layout_width="772dp"
-        android:layout_height="40dp"
+        android:layout_width="930dp"
+        android:layout_height="80dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
+        android:textAlignment="center"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_title" />
 
     <Button
         android:id="@+id/ans_1"
         android:layout_width="100dp"
         android:layout_height="70dp"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="48dp"
         android:text="1"
         android:textSize="36sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +35,7 @@
         android:layout_width="100dp"
         android:layout_height="70dp"
         android:layout_marginStart="204dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="48dp"
         android:text="2"
         android:textSize="36sp"
         app:layout_constraintStart_toEndOf="@+id/textView_回答1"
@@ -70,7 +71,7 @@
         android:layout_width="160dp"
         android:layout_height="60dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="52dp"
         android:textSize="36sp"
         app:layout_constraintStart_toEndOf="@+id/ans_1"
         app:layout_constraintTop_toBottomOf="@+id/textView_問題" />
@@ -81,7 +82,7 @@
         android:layout_height="60dp"
         android:layout_marginEnd="172dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="208dp"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.727"
@@ -116,5 +117,28 @@
         app:layout_constraintStart_toEndOf="@+id/ans_4"
         app:layout_constraintTop_toBottomOf="@+id/textView_回答2"
         app:layout_constraintVertical_bias="0.909" />
+
+    <TextView
+        android:id="@+id/textView_title"
+        android:layout_width="931dp"
+        android:layout_height="46dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_ホームへ"
+        android:layout_width="151dp"
+        android:layout_height="110dp"
+        android:layout_marginBottom="2dp"
+        android:background="@drawable/image_home"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
