--- a/app/src/main/res/layout/qr1_ans.xml
+++ b/app/src/main/res/layout/qr1_ans.xml
@@ -43,7 +43,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="44dp"
         android:layout_marginTop="16dp"
-        android:text="正解!!"
+        android:text="正解です！"
+        android:textAlignment="center"
         android:textColor="@android:color/holo_red_light"
         android:textSize="80sp"
         android:textStyle="bold"
