--- a/app/src/main/res/layout/top.xml
+++ b/app/src/main/res/layout/top.xml
@@ -118,7 +118,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
-        android:text="QR"
+        android:text="QR読み取り"
         android:textColor="@android:color/background_light"
         android:textSize="36sp"
         android:textStyle="bold"
@@ -134,9 +134,8 @@
         android:layout_height="47dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:gravity="center"
-        android:text="MAP"
+        android:text="学内マップ"
         android:textColor="@android:color/background_light"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -149,9 +148,8 @@
         android:layout_height="46dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:gravity="center"
-        android:text="PAINT"
+        android:text="お絵描きApp"
         android:textColor="@android:color/background_light"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -164,9 +162,8 @@
         android:layout_height="47dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:gravity="center"
-        android:text="ARS"
+        android:text="アルス情報"
         android:textColor="@android:color/background_light"
         android:textSize="30sp"
         android:textStyle="bold"
