--- a/app/src/main/res/layout/answer_stamp.xml
+++ b/app/src/main/res/layout/answer_stamp.xml
@@ -176,30 +176,27 @@
 
     <Button
         android:id="@+id/button_home"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="7dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="48dp"
+        android:layout_width="110dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="90dp"
+        android:background="@drawable/ng_image_button"
         android:text="ホームへ"
-        app:layout_constraintBottom_toTopOf="@+id/button_QR"
-        app:layout_constraintEnd_toStartOf="@+id/textView15"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView18"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
     <Button
         android:id="@+id/button_QR"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="68dp"
-        android:layout_marginEnd="56dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="110dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="3dp"
+        android:layout_marginTop="7dp"
+        android:background="@drawable/ng_image_button"
         android:text="QR画面へ"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/Q4_stamp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_home" />
 </android.support.constraint.ConstraintLayout>
