--- a/app/src/main/res/layout/paint_top.xml
+++ b/app/src/main/res/layout/paint_top.xml
@@ -99,13 +99,13 @@
 
     <Button
         android:id="@+id/button_次へ"
-        android:layout_width="172dp"
-        android:layout_height="96dp"
+        android:layout_width="216dp"
+        android:layout_height="133dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="次へ！"
+        android:background="@drawable/navigationj_next"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
