--- a/app/src/main/res/layout/ql_main.xml
+++ b/app/src/main/res/layout/ql_main.xml
@@ -22,7 +22,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="QR読み取り画面"
-                android:textSize="36sp" />
+                android:textSize="36sp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/button_home"
@@ -31,7 +32,10 @@
                 android:layout_weight="1"
                 android:background="@drawable/ok_image_button"
                 android:text="ホームへ"
-                android:textSize="36sp" />
+                android:textAlignment="center"
+                android:textColor="@android:color/holo_orange_dark"
+                android:textSize="36sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
