--- a/app/src/main/res/layout/qr1_ans_ng.xml
+++ b/app/src/main/res/layout/qr1_ans_ng.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="159dp"
         android:layout_marginStart="160dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="32dp"
         android:text="残念！不正解です"
         android:textColor="@android:color/background_dark"
         android:textSize="80sp"
@@ -50,28 +50,51 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="72dp"
-        android:text="もう一度答える！！"
+        android:layout_marginTop="16dp"
+        android:text="↓もう一度答える↓"
         android:textSize="30sp"
         app:layout_constraintEnd_toStartOf="@+id/imageView7"
-        app:layout_constraintHorizontal_bias="0.948"
+        app:layout_constraintHorizontal_bias="0.942"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="8dp"
+        android:text="↓ホームに戻る↓"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView7"
+        app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintStart_toEndOf="@+id/imageView8"
+        app:layout_constraintTop_toBottomOf="@+id/button_問題へ戻る" />
 
     <Button
         android:id="@+id/button_問題へ戻る"
         android:layout_width="184dp"
-        android:layout_height="111dp"
+        android:layout_height="99dp"
+        android:layout_marginEnd="80dp"
+        android:background="@drawable/image_back"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView7"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+    <Button
+        android:id="@+id/button_ホームへ戻る"
+        android:layout_width="184dp"
+        android:layout_height="114dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="88dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/ng_image_button"
-        android:text="クリック!!"
+        android:layout_marginEnd="80dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/image_home"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView10"
-        app:layout_constraintVertical_bias="0.222" />
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imageView8"
