--- a/app/src/main/res/layout/qr1.xml
+++ b/app/src/main/res/layout/qr1.xml
@@ -9,12 +9,12 @@
     <TextView
         android:id="@+id/textView_問題"
         android:layout_width="930dp"
-        android:layout_height="80dp"
+        android:layout_height="111dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:textAlignment="center"
-        android:textSize="30sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_title" />
@@ -24,7 +24,7 @@
         android:layout_width="100dp"
         android:layout_height="70dp"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="16dp"
         android:text="1"
         android:textSize="36sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:layout_width="100dp"
         android:layout_height="70dp"
         android:layout_marginStart="204dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="16dp"
         android:text="2"
         android:textSize="36sp"
         app:layout_constraintStart_toEndOf="@+id/textView_回答1"
@@ -53,16 +53,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ans_1"
-        app:layout_constraintVertical_bias="0.672" />
+        app:layout_constraintVertical_bias="0.431" />
 
     <Button
         android:id="@+id/ans_4"
         android:layout_width="100dp"
         android:layout_height="70dp"
+        android:layout_marginBottom="108dp"
+        android:layout_marginEnd="1dp"
         android:layout_marginStart="204dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="92dp"
         android:text="4"
         android:textSize="36sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textView_回答4"
         app:layout_constraintStart_toEndOf="@+id/textView_回答3"
         app:layout_constraintTop_toBottomOf="@+id/ans_2" />
 
@@ -70,8 +74,7 @@
         android:id="@+id/textView_回答1"
         android:layout_width="160dp"
         android:layout_height="60dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="24dp"
         android:textSize="36sp"
         app:layout_constraintStart_toEndOf="@+id/ans_1"
         app:layout_constraintTop_toBottomOf="@+id/textView_問題" />
@@ -82,10 +85,10 @@
         android:layout_height="60dp"
         android:layout_marginEnd="172dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="208dp"
+        android:layout_marginTop="204dp"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.727"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/ans_2"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -93,14 +96,12 @@
         android:id="@+id/textView_回答3"
         android:layout_width="160dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="64dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="99dp"
+        android:layout_marginBottom="116dp"
+        android:layout_marginTop="95dp"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ans_3"
-        app:layout_constraintTop_toBottomOf="@+id/textView_回答1"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_回答1" />
 
     <TextView
         android:id="@+id/textView_回答4"
@@ -113,18 +114,17 @@
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toEndOf="@+id/ans_4"
         app:layout_constraintTop_toBottomOf="@+id/textView_回答2"
-        app:layout_constraintVertical_bias="0.909" />
+        app:layout_constraintVertical_bias="0.537" />
 
     <TextView
         android:id="@+id/textView_title"
         android:layout_width="931dp"
-        android:layout_height="46dp"
+        android:layout_height="55dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:textAlignment="center"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -156,7 +156,7 @@
         android:id="@+id/textView_残り回数"
         android:layout_width="85dp"
         android:layout_height="47dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="16dp"
         android:textAlignment="center"
         android:textSize="36sp"
         android:textStyle="bold"
