--- a/app/src/main/res/layout/top.xml
+++ b/app/src/main/res/layout/top.xml
@@ -17,10 +17,10 @@
         android:layout_marginTop="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.704"
+        app:layout_constraintHorizontal_bias="0.708"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.856"
+        app:layout_constraintVertical_bias="0.854"
         app:srcCompat="@drawable/title_haikei" />
 
     <ImageView
@@ -39,11 +39,12 @@
         android:layout_height="112dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/itusared"
         app:layout_constraintEnd_toStartOf="@+id/button_map"
         app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="354dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
         android:id="@+id/button_map"
@@ -136,7 +137,7 @@
     <Button
         android:id="@+id/button_web"
         android:layout_width="39dp"
-        android:layout_height="358dp"
+        android:layout_height="369dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/ng_image_button"
         android:text="お絵描き公開一覧↑タップ"
