--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
 
-    android:orientation="vertical"
-
     android:layout_width="match_parent"
+
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.tomon.main_painter_v1.MainActivity">
 
 
@@ -100,6 +100,51 @@
         android:background="@drawable/ok_image_button"
         android:text="絵を見に行く"
         android:textSize="24sp" />
+
+    <Button
+        android:id="@+id/button_黒"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/Button_Save"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="143dp"
+        android:text="黒" />
+
+    <Button
+        android:id="@+id/button_赤"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/Button_Save"
+        android:layout_toStartOf="@+id/Button_Save"
+        android:text="赤" />
+
+    <Button
+        android:id="@+id/button_青"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/Button_Save"
+        android:layout_alignStart="@+id/Button_Save"
+        android:text="青" />
+
+    <TextView
+        android:id="@+id/textView25"
+        android:layout_width="190dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/Button_Save"
+        android:layout_marginBottom="16dp"
+        android:layout_toEndOf="@+id/button_青"
+        android:text="全体的に色が変わります"
+        android:textAlignment="viewStart"
+        android:textSize="15sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/button_paint_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:text="一つ戻る" />
 
     <!-- 追加：ここまで  -->
 
