--- a/app/src/main/res/layout/answer_stamp.xml
+++ b/app/src/main/res/layout/answer_stamp.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView12"
         android:layout_width="165dp"
         android:layout_height="69dp"
-        android:layout_marginStart="120dp"
+        android:layout_marginStart="152dp"
         android:layout_marginTop="24dp"
         android:text="１問目"
         android:textColor="@android:color/holo_blue_dark"
@@ -23,7 +23,7 @@
         android:id="@+id/textView13"
         android:layout_width="165dp"
         android:layout_height="69dp"
-        android:layout_marginStart="120dp"
+        android:layout_marginStart="128dp"
         android:layout_marginTop="24dp"
         android:text="２問目"
         android:textColor="@android:color/holo_blue_dark"
@@ -36,7 +36,7 @@
         android:id="@+id/textView14"
         android:layout_width="165dp"
         android:layout_height="69dp"
-        android:layout_marginStart="120dp"
+        android:layout_marginStart="116dp"
         android:layout_marginTop="24dp"
         android:text="３問目"
         android:textColor="@android:color/holo_blue_dark"
@@ -49,8 +49,8 @@
         android:id="@+id/textView15"
         android:layout_width="165dp"
         android:layout_height="69dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="12dp"
         android:text="４問目"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="50sp"
@@ -62,7 +62,7 @@
         android:id="@+id/textView16"
         android:layout_width="165dp"
         android:layout_height="69dp"
-        android:layout_marginStart="120dp"
+        android:layout_marginStart="136dp"
         android:layout_marginTop="12dp"
         android:text="５問目"
         android:textColor="@android:color/holo_blue_dark"
@@ -75,128 +75,93 @@
         android:id="@+id/textView17"
         android:layout_width="180dp"
         android:layout_height="69dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="120dp"
+        android:layout_marginEnd="52dp"
         android:layout_marginTop="12dp"
         android:text="EX問題"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView16"
         app:layout_constraintTop_toBottomOf="@+id/Q3_stamp" />
 
     <ImageView
         android:id="@+id/Q1_stamp"
-        android:layout_width="100dp"
-        android:layout_height="79dp"
+        android:layout_width="160dp"
+        android:layout_height="130dp"
         android:layout_marginStart="152dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <ImageView
         android:id="@+id/Q2_stamp"
-        android:layout_width="100dp"
-        android:layout_height="79dp"
-        android:layout_marginStart="187dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="160dp"
+        android:layout_height="130dp"
+        android:layout_marginStart="136dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintStart_toEndOf="@+id/Q1_stamp"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <ImageView
         android:id="@+id/Q3_stamp"
-        android:layout_width="100dp"
-        android:layout_height="79dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="160dp"
+        android:layout_height="130dp"
+        android:layout_marginEnd="76dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.029"
-        app:layout_constraintStart_toEndOf="@+id/Q2_stamp"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <ImageView
         android:id="@+id/Q4_stamp"
-        android:layout_width="100dp"
-        android:layout_height="79dp"
-        android:layout_marginBottom="30dp"
+        android:layout_width="160dp"
+        android:layout_height="130dp"
+        android:layout_marginBottom="60dp"
         android:layout_marginStart="152dp"
-        android:layout_marginTop="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView15"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/Q5_stamp"
-        android:layout_width="100dp"
-        android:layout_height="79dp"
-        android:layout_marginBottom="30dp"
-        android:layout_marginStart="176dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="160dp"
+        android:layout_height="130dp"
+        android:layout_marginBottom="60dp"
+        android:layout_marginStart="136dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Q4_stamp"
-        app:layout_constraintTop_toBottomOf="@+id/textView16"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toEndOf="@+id/Q4_stamp" />
 
     <ImageView
         android:id="@+id/Qex_stamp"
-        android:layout_width="100dp"
-        android:layout_height="79dp"
-        android:layout_marginBottom="30dp"
-        android:layout_marginStart="196dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="160dp"
+        android:layout_height="130dp"
+        android:layout_marginBottom="60dp"
+        android:layout_marginEnd="72dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Q5_stamp"
-        app:layout_constraintTop_toBottomOf="@+id/textView17"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/textView18"
-        android:layout_width="64dp"
-        android:layout_height="221dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="正解数"
-        android:textAlignment="viewEnd"
-        android:textAllCaps="false"
-        android:textColor="@android:color/holo_orange_dark"
-        android:textSize="60sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView12"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.07" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/button_home"
-        android:layout_width="110dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="90dp"
-        android:background="@drawable/ng_image_button"
-        android:text="ホームへ"
+        android:layout_width="117dp"
+        android:layout_height="94dp"
+        android:layout_marginTop="372dp"
+        android:background="@drawable/image_home"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView18" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_QR"
-        android:layout_width="110dp"
+        android:layout_width="140dp"
         android:layout_height="60dp"
         android:layout_marginBottom="3dp"
         android:layout_marginTop="7dp"
         android:background="@drawable/ng_image_button"
         android:text="QR画面へ"
-        android:textSize="24sp"
+        android:textColor="@android:color/holo_green_light"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_home" />
+        app:layout_constraintTop_toBottomOf="@+id/button_home"
+        app:layout_constraintVertical_bias="1.0" />
 </android.support.constraint.ConstraintLayout>
