--- a/app/src/main/res/layout/top.xml
+++ b/app/src/main/res/layout/top.xml
@@ -136,13 +136,13 @@
 
     <Button
         android:id="@+id/button_web"
-        android:layout_width="39dp"
-        android:layout_height="369dp"
+        android:layout_width="36dp"
+        android:layout_height="339dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/ng_image_button"
-        android:text="お絵描き公開一覧↑タップ"
-        android:textSize="23sp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView47"
+        android:text="→お絵描き公開一覧→"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/button_web2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -179,12 +179,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView47"
+    <Button
+        android:id="@+id/button_web2"
         android:layout_width="235dp"
         android:layout_height="344dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/paint_image"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/paint_image" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_回答状況"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="68dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/ng_image_button"
+        android:text="回答状況確認"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/button_web"
+        app:layout_constraintTop_toBottomOf="@+id/imageView46" />
 
 </android.support.constraint.ConstraintLayout>
